Fixing sizing issues on mobile
Former-commit-id: ea17440a1c6c5233da1bd1142b2abd8bd88987d3

--- a/doc/_static/custom.css
+++ b/doc/_static/custom.css
@@ -13,5 +13,5 @@ div.bodywrapper {
 }
 
 div.document {
-  width: 100%;
+  width: 1980px;
 }
